--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
-  <link rel="stylesheet" href="/app.a6a4d504.css"></head>
+  <link rel="stylesheet" href="/dist/app.a6a4d504.css"></head>
   <body>
     <div id="app-container"></div>
   </body>
-  <script src="/app.a6a4d504.js"></script>
+  <script src="/dist/app.a6a4d504.js"></script>
 </html>
